add : API documentation and start.sh
