# app/Http/Controllers/MemberBoxController.php
@@ -11,6 +11,37 @@ use App\Http\Requests\UpdateMemberBoxRequest;
 class MemberBoxController extends Controller
 {
     /**
+     * @OA\Get(
+     *      path="/member-boxes",
+     *      operationId="getMemberBoxesList",
+     *      tags={"MemberBoxes"},
+     *      summary="Get list of member-boxes",
+     *      description="Returns list of member-boxes",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\Parameter(
+     *          name="page",
+     *          description="Page number",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer",
+     *              default=1
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/MemberBoxResource")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
@@ -33,6 +64,35 @@ class MemberBoxController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *      path="/member-boxes",
+     *      operationId="storeMemberBox",
+     *      tags={"MemberBoxes"},
+     *      summary="Store new member-box",
+     *      description="Returns member-box data",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreMemberBoxRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/MemberBoxResource")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
      * Store a newly created resource in storage.
      *
      * @param  \App\Http\Requests\StoreMemberBoxRequest  $request
@@ -47,6 +107,40 @@ class MemberBoxController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *      path="/member-boxes/{id}",
+     *      operationId="getMemberBoxById",
+     *      tags={"MemberBoxes"},
+     *      summary="Get member-box information",
+     *      description="Returns member-box data",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="MemberBox id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/MemberBoxResource")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
      * Display the specified resource.
      *
      * @param  \App\Models\MemberBox  $memberBox
